crates/macros/tests/fail/fixed-layout/lifetitme.stderr
error: FixedLayout on types with generics is not currently supported
 --> $DIR/lifetitme.rs:3:10
  |
3 | #[derive(FixedLayout)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
